# my-obsidian-with-rag-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  embedding_benchmark.py  main.py  mcp_config.json  mcp_server.py  pyproject.toml  test_chroma.py  test_gemini.py  test_langgraph.py  test_mcp.py
src/embeddings/: __init__.py  kosimcse_embeddings.py  ollama_embeddings.py
src/graphs/: __init__.py  indexing_graph.py  query_graph.py
src/graphs/nodes/: __init__.py  chunking_node.py  context_builder_node.py  embedding_node.py  obsidian_read_node.py  rerank_node.py  retrieval_node.py  vector_store_node.py
src/logging/: logger_factory.py
src/mcp/: mcp_server.py
src/obsidian/: obsidian_loader.py
src/reranking/: cross_encoder_reranker.py
src/schemas/: __init__.py  document.py  query.py
src/utils/: __init__.py
src/vectorstore/: vector_db.py
